impl metadata for LocalPath and fix sample files too large